--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -12,8 +12,7 @@
     <% @week_days.each do |day| %>
       <div class='item'>
         <div class='date'>
-          <!-- 表示するので <%= %> に修正 -->
-          <%= day[:month] %>/<%= day[:date] %>
+          <%= day[:month] %>/<%= day[:date] %><%= day[:wday] %>
         </div>
         <ul class='content'>
         <% if day[:plans].length != 0 %>
